force-app/main/default/objects/Sales_Order__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Billing_Address_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>