force-app/main/default/objects/Sales_Order__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <formula>IF(
  ISPICKVAL(Status__c, &quot;Voided&quot;),
  0,
  MIN(
    Subtotal__c,
    ROUND(
      CASE(TEXT(Discount_Type__c),
        &quot;Fixed&quot;,      BLANKVALUE(Discount_Value__c,0),
        &quot;Percentage&quot;, Subtotal__c * (BLANKVALUE(Discount_Value__c,0)/100),
        0
      ),
      2
    )
  )
)</formula>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>