force-app/main/default/objects/Sales_Order__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <formula>( Total_Price__c - BLANKVALUE(Discount_Amount__c,0) ) - BLANKVALUE(Total_Cost__c,0)</formula>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>