force-app/main/default/objects/Sales_Order__c/fields/Is_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_Order__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Service Order</label>
    <type>Checkbox</type>
</CustomField>