force-app/main/default/objects/Sales_Order__c/fields/Pricebook2__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Price_Book_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>