force-app/main/default/objects/Sales_Order__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.FederationIdentifier</field>
            <operation>contains</operation>
            <value>@</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Person_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>