force-app/main/default/objects/Sales_Order__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Address</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Service_Address_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>