force-app/main/default/objects/Sales_Order__c/fields/Service_Relationship__c.field-meta.xml
<CustomField>
  <fullName>Service_Relationship__c</fullName>
  <label>Service Relationship</label>
  <type>Lookup</type>
  <referenceTo>Service_Relationship__c</referenceTo>
  <relationshipLabel>Sales Orders</relationshipLabel>
  <relationshipName>Service_Relationship_Sales_Orders</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>